// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFacetButton is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiFacetButton testClass1 testClass2 css-1vy4arh-euiButtonDisplay-s-euiFacetButton-unSelected"
  data-test-subj="test subject string"
  title="aria-label"
>
  <span
    class=" css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props icon is rendered 1`] = `
<button
  class="euiFacetButton css-1vy4arh-euiButtonDisplay-s-euiFacetButton-unSelected"
>
  <span
    class=" css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__icon"
      data-euiicon-type="dot"
    />
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isDisabled is rendered 1`] = `
<button
  class="euiFacetButton css-a3g3ge-euiButtonDisplay-s-isDisabled-euiFacetButton-unSelected"
  disabled=""
>
  <span
    class=" css-yxnt2m-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props isLoading is rendered 1`] = `
<button
  class="euiFacetButton css-a3g3ge-euiButtonDisplay-s-isDisabled-euiFacetButton-unSelected"
  disabled=""
>
  <span
    class=" css-yxnt2m-euiButtonDisplayContent-isDisabled"
  >
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner css-155ohbx-euiLoadingSpinner-m"
      role="progressbar"
    />
  </span>
</button>
`;

exports[`EuiFacetButton props isSelected is rendered 1`] = `
<button
  class="euiFacetButton css-dxvpjg-euiButtonDisplay-s-euiFacetButton-isSelected"
>
  <span
    class=" css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiFacetButton props quantity is rendered 1`] = `
<button
  class="euiFacetButton css-1vy4arh-euiButtonDisplay-s-euiFacetButton-unSelected"
>
  <span
    class=" css-v341i7-euiButtonDisplayContent"
  >
    <span
      class="euiFacetButton__text css-129zrg2-euiFacetButton__text"
    >
      Content
    </span>
    <span
      class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFacetButton__quantity"
    >
      60
    </span>
  </span>
</button>
`;
